@startuml
title <size: 30> US25 Class Diagram

interface Sensor {
    + getName() : String
    + getUnit() : String
    + getLog() : ArrayList<String>
}

interface Value<T> {
    + getValue() : T
    + getValueAsString() : String
}

interface ExternalServices {

}

class AveragePowerConsumptionSensor{
    - sensorName : String
    - UNIT : String
    - TYPE : String
    - simHardware : SimHardware
    - log : ArrayList<Value<Integer>>

    +AveragePowerConsumptionSensor(sensorName : String,externalServices : ExternalServices)
    + getReading(initialDate : String, finalDate) : Value<Integer>
    + getName() : String
    + getUnit() : String
    + getLog() : ArrayList<String>
    + getType() : String
    - validSensorName(sensorName : String) : boolean
    - getInitialDateTime(initialDate : String) : LocalDateTime
    - getFinalDateTime(finalDate : String) : LocalDateTime
    - validateDates(initialDate : String, finalDate : String) : boolean
    - addValueToLog(value : Value<Integer>) : void
}

class AveragePowerConsumptionValue {
    + AveragePowerConsumptionValue(reading : String)
    - validateReading(reading : String) : boolean
    + getValue() : Integer
    + getValueAsString() : String
}

class SimHardware{
    + getValue : String
}

Value <|.. AveragePowerConsumptionValue
Sensor <|.. AveragePowerConsumptionSensor
ExternalServices <|.. SimHardware
AveragePowerConsumptionSensor .right.> AveragePowerConsumptionValue
AveragePowerConsumptionSensor .left.> SimHardware
@enduml